# naive-redis-module

./: CMakeLists.txt
src/: rand.cpp  rmod.cpp
